*SVN*

* Added find-by-path options to ActiveResource::Base.find [DHH]. Examples:

    employees = Person.find(:all, :from => "/companies/1/people.xml") # => GET /companies/1/people.xml
    manager   = Person.find("/companies/1/manager.xml")               # => GET /companies/1/manager.xml


* Added support for using classes from within a single nested module [DHH]. Example:

    module Highrise
      class Note < ActiveResource::Base
        self.site = "http://37s.sunrise.i:3000"
      end

      class Comment < ActiveResource::Base
        self.site = "http://37s.sunrise.i:3000"
      end
    end

  assert_kind_of Highrise::Comment, Note.find(1).comments.first
    

* Added load_attributes_from_response as a way of loading attributes from other responses than just create [DHH]

    class Highrise::Task < ActiveResource::Base
      def complete
        load_attributes_from_response(post(:complete))
      end
    end

  ...will set "done_at" when complete is called.


* Added support for calling custom methods #6979 [rwdaigle]

    Person.find(:managers)    # => GET /people/managers.xml
    Kase.find(1).post(:close) # => POST /kases/1/close.xml

* Remove explicit prefix_options parameter for ActiveResource::Base#initialize. [Rick]
  ActiveResource splits the prefix_options from it automatically.

* Allow ActiveResource::Base.delete with custom prefix. [Rick]

* Add ActiveResource::Base#dup [Rick]

* Fixed constant warning when fetching the same object multiple times [DHH]

* Added that saves which get a body response (and not just a 201) will use that response to update themselves [DHH]

* Disregard namespaces from the default element name, so Highrise::Person will just try to fetch from "/people", not "/highrise/people" [DHH]

* Allow array and hash query parameters.  #7756 [Greg Spurrier]

* Loading a resource preserves its prefix_options.  #7353 [Ryan Daigle]

* Carry over the convenience of #create from ActiveRecord.  Closes #7340.  [Ryan Daigle]
